# wikipedia_cleanup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  server-notebook.ipynb  setup.cfg
.github/workflows/: test.yaml
data_exploration/: FH Data Exploration.ipynb  Full_data.ipynb  Full_data_exploration.ipynb  MB Data Exploration.ipynb  NK MVP Predictor Attempt 2.ipynb  NK_MVP_predictor_Attempt.ipynb  NK_classification_train_test.ipynb  Static-Dynamic.ipynb  TB Data exploration.ipynb  niklas_data_exploration.ipynb
notebooks/: run_ensemble.ipynb  run_framework.ipynb  run_property_correlation.ipynb  run_xgboost.ipynb  run_xgboost_alldata.ipynb  run_xgboost_thresholds.ipynb
notebooks/fabian/: correlations.ipynb
notebooks/malte/: Padding.ipynb  Random_Forest.ipynb  XGBoost.ipynb  feature_selection.ipynb  template_visualizations.ipynb  threshold_tuning.ipynb  threshold_tuninig.ipynb
notebooks/martin/: Data exploration.ipynb
notebooks/niklas/: explore_property_correlation.ipynb  explore_renaming.ipynb
tests/: test_root.py  test_wikipedia_cleanup.py
wikipedia_cleanup/: DataFilter.py  ar_correlation.py  ar_predictor.py  ar_template_predictor.py  baseline.py  baseline_min_precision.py  create_new_data_format.py  data_assumption_tests.py  data_filter.py  data_processing.py  delete_bot_reverts.py  ensemble.py  evaluation.py  filter_properties_with_new_changes.py  majority_value_per_day.py  niklas_data_exploration.ipynb  predict.py  predictor.py  property_correlation.py  random_forest.py  schema.py  simple_archive_read.py  utils.py
(+13 files in other folders)
