[tool.poetry]
name = "wikipedia_cleanup"
version = "0.1.0"
description = ""
authors = ["fabianhe <39628987+fabianhe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
pandas = "^1.0.0"
numpy = "^1.19.5"
tqdm = "^4.62.3"
matplotlib = "3.3.4"
libarchive = "^0.4.7"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.2.1"
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
