[tool.poetry]
name = "wikipedia_cleanup"
version = "0.1.0"
description = ""
authors = ["fabianhe <39628987+fabianhe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
jupyterlab = "^3.2.1"
pandas = "^1.0.0"
numpy = "^1.19.5"
matplotlib = "^3.0.0"
seaborn = "^0.11.2"
tqdm = "^4.62.3"
pydantic = "^1.8.2"
ipywidgets = "^7.6.5"
python-Levenshtein = "^0.12.2"
scikit-learn = "<=0.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = "^21.9b0"
nb-black = "^1.0.7"
isort = "^5.9.3"
flake8 = "^4.0.1"
mypy = "^0.910"
types-dataclasses = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
